src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>MACleanStreet__c</fullName>
        <label>Clean Street (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAQuality__c</fullName>
        <label>Quality (MapAnything)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MASimilarity__c</fullName>
        <label>Similarity (MapAnything)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAVerifiedLatitude__c</fullName>
        <label>Verified Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAVerifiedLongitude__c</fullName>
        <label>Verified Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Male_Female__c</fullName>
        <inlineHelpText>This field is pre-populated based on information in the Personal Data section.  Select the appropriate room type.</inlineHelpText>
        <label>Female/Male Room</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private or Adult w/ Spouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meal_Notes__c</fullName>
        <label>Meal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meal_Options__c</fullName>
        <label>Meal Options</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetarian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Form_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the Physician Form been received?</description>
        <label>Medical Form Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_scholarship_fundraising_packet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box If you need financial assistance to attend the program.  Someone from the Junior Statesmen Foundation will contact you with more information regarding scholarships and fundraising.</inlineHelpText>
        <label>Need scholarship/fundraising packet?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetForum_Key__c</fullName>
        <description>The unique identifier/key this transaction had in NetForum.</description>
        <inlineHelpText>The unique identifier/key this transaction had in NetForum.</inlineHelpText>
        <label>NetForum Key</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Netforum_Invoice_Number__c</fullName>
        <inlineHelpText>Used for historical opportunities imported from Netforum</inlineHelpText>
        <label>Netforum Invoice Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Payments__c</fullName>
        <description>No payments to date.</description>
        <formula>IF( Total_Payments__c = 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_tax_Deductible_Portion__c</fullName>
        <inlineHelpText>Portion of the opportunity amount that is not tax-deductible (value of goods/services provided).</inlineHelpText>
        <label>Non-tax Deductible Portion</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Permission_Slips_Received__c</fullName>
        <inlineHelpText>Total number of permission slips received from the group.</inlineHelpText>
        <label>Number of Permission Slips Received</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Products__c</fullName>
        <inlineHelpText>Sum of the Quantity field for all products.  Includes both Student and Teacher packages, and only products with a sales price &gt; 0.</inlineHelpText>
        <label>Number of Products</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.UnitPrice</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Online_Payment_Link__c</fullName>
        <defaultValue>IF( $RecordType.Name = &quot;Summer School Registration&quot;, &quot;https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=X6TQSHUUKLYBA&quot;, &quot;&quot;)</defaultValue>
        <inlineHelpText>Click here to make a payment toward your invoice.</inlineHelpText>
        <label>Online Payment Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>This is the auto-generated number for new orders that will be the sales order number in QuickBooks.</description>
        <displayFormat>{000000}</displayFormat>
        <inlineHelpText>This is the auto-generated number for new orders that will be the sales order number in QuickBooks.</inlineHelpText>
        <label>Sales Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Orientation_Guide__c</fullName>
        <formula>Case(Campus_Session__c, 
&quot;Summer School at Princeton&quot;, &quot;http://jsa.org/wp-content/uploads/PU.pdf&quot;, 
&quot;Summer School at Stanford&quot;, &quot;http://jsa.org/wp-content/uploads/SU.pdf&quot;, 
&quot;Summer School at Georgetown - Session I&quot;, &quot;http://jsa.org/wp-content/uploads/GU1.pdf&quot;, 
&quot;Summer School at Georgetown - Session II&quot;, &quot;http://jsa.org/wp-content/uploads/GU2.pdf&quot;, 
&quot;Summer School at University of Virginia&quot;, &quot;http://jsa.org/wp-content/uploads/UVA.pdf&quot;, 
&quot;JSA Diplomat Program, China&quot;, &quot;jsa.org/downloads&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orientation Guide</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Email__c</fullName>
        <inlineHelpText>Usable by workflows, must be populated by data loader trigger</inlineHelpText>
        <label>Parent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_First_Name__c</fullName>
        <formula>Primary_Contact__r.Parent_Guardian_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Parent/Guardian First Name from Primary Contact Link</inlineHelpText>
        <label>Parent First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Last_Name__c</fullName>
        <formula>Primary_Contact__r.Parent_Guardian_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Parent/Guardian Last Name from Primary Contact Link</inlineHelpText>
        <label>Parent Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_or_Guardian_s_Email__c</fullName>
        <description>Parent&apos;s Email from &quot;primary&quot; contact.  For templates.</description>
        <formula>Primary_Contact__r.Parent_or_Guardian_s_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent or Guardian&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Bucket__c</fullName>
        <formula>IF( AND( Invoice_Count__c &gt;= 1, Remaining_Balance__c &lt;= 0), &quot;Full Pay&quot;,
IF( AND((Applied_Amount__c - Total_Credits__c) &gt; 0, (Applied_Amount__c - Total_Credits__c) = 500), &quot;Deposit Only&quot;,
IF( (Applied_Amount__c - Total_Credits__c) &lt; 500, &quot;Less than deposit&quot;, 
&quot;More Than Deposit&quot;)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>full pay = 0 balance
more than deposit = greater than $500 in payments
deposit only = $500, Less than deposit &lt; $500</inlineHelpText>
        <label>Payment Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Complete_SSch__c</fullName>
        <formula>IF(JSA_Scholar_Code__c = &quot;Summer Returner&quot;, 100, 
(CASE(Academics_Complete__c, &quot;True&quot;, 1, 1)) + 
(CASE(Personal_Essay_Status__c, &quot;Received&quot;, 33, &quot;Not Required&quot;, 33, 0)) +
(CASE(Transcript_Status__c, &quot;Received&quot;, 33, &quot;Not Required&quot;, 33, 0)) +
(CASE(Teacher_recommendation_letter__c, &quot;Received&quot;, 33, &quot;Not Required&quot;, 33, 0))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates a &quot;percent complete&quot; number for summer school applications.  33% each for Essay, Transcript, and Recommendation.  Summer Returners are automatically 100%.</inlineHelpText>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permission_Form_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the parental permission form been received?</description>
        <label>Permission Form Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Data_Complete__c</fullName>
        <formula>IF(AND(Primary_Contact__r.Email&lt;&gt;&quot;&quot;,Primary_Contact__r.MailingStreet&lt;&gt;&quot;&quot;,Primary_Contact__r.MailingCity&lt;&gt;&quot;&quot;,Primary_Contact__r.MailingState&lt;&gt;&quot;&quot;,Primary_Contact__r.MailingPostalCode&lt;&gt;&quot;&quot;,TEXT(Primary_Contact__r.Gender__c)&lt;&gt;&quot;&quot;),&quot;True&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please complete all information on the Personal Data tab above. Home Phone is required for summer applicants. After all the required information has been filled in and verified this step will be shown as complete (allow up to one hour for verification).</inlineHelpText>
        <label>Personal Data Complete?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Essay_Status__c</fullName>
        <inlineHelpText>Paste your completed essays into the fields under the Essay tab above. After both answers have been submitted and reviewed, this step will be shown as &quot;Received.&quot;</inlineHelpText>
        <label>Essay Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Personal_Essay__c</fullName>
        <description>Please write an essay of at least 250 words, but no more than 750 words, on one of the topics below. The personal essay helps us understand you as a person and a student, aside from your grades. It also demonstrates your ability to organize your thoughts and express yourself (plus, it&apos;s great preparation for the Common Application for college).</description>
        <label>Personal Essay</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Physician_Signature_Form_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physician Signature Form Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Predicted_Revenue__c</fullName>
        <formula>Amount  *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount times Probability.</inlineHelpText>
        <label>Predicted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_ID__c</fullName>
        <formula>Primary_Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The contact record for the student or other primary contact related to the opportunity.  In the case of summer registrations through the portal, this will always be the student contact.</inlineHelpText>
        <label>Primary Contact Link</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Summer Program Applications</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QB_Invoice_Template__c</fullName>
        <description>The invoice template that the opportunity will use in QuickBooks if this directly becomes an invoice in QuickBooks.</description>
        <inlineHelpText>The invoice template that the opportunity will use in QuickBooks if this directly becomes an invoice in QuickBooks.</inlineHelpText>
        <label>QuickBooks Invoice Template</label>
        <picklist>
            <picklistValues>
                <fullName>Custom S.O. Invoice</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QB_Opportunity_TXN_ID__c</fullName>
        <description>The internal ID of the sales order this opportunity is in QuickBooks.</description>
        <inlineHelpText>The internal ID of the sales order this opportunity is in QuickBooks.</inlineHelpText>
        <label>QuickBooks Opportunity TXN ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickBooks_Company__c</fullName>
        <description>The specific QuickBooks company the opportunity will be sent to.</description>
        <inlineHelpText>The specific QuickBooks company the opportunity will be sent to.</inlineHelpText>
        <label>QuickBooks Class</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickBooks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not this opportunity is in QuickBooks as a sales order.</description>
        <inlineHelpText>Indicates whether or not this opportunity is in QuickBooks as a sales order. DO NOT DELETE THE OPPORTUNITY IF THIS IS CHECKED.</inlineHelpText>
        <label>QuickBooks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Teacher_Email__c</fullName>
        <inlineHelpText>Enter the email address for the teacher or counselor who will provide a recommendation letter.</inlineHelpText>
        <label>Reference Teacher Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reference_Teacher_Name__c</fullName>
        <inlineHelpText>Enter the first and last name of the teacher whom you will ask to provide a recommendation letter.  DO NOT enter any salutation, such as &quot;Mr.&quot;, &quot;Mrs.&quot;, or &quot;Dr.&quot;</inlineHelpText>
        <label>Reference Teacher Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Teacher_Phone__c</fullName>
        <description>This field should be merged with the teacher contact record.</description>
        <inlineHelpText>Enter the phone number of the teacher or counselor who will provide a recommendation letter.</inlineHelpText>
        <label>Reference Teacher Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Remaining_Balance__c</fullName>
        <description>Remaining balance from all associated invoices.</description>
        <label>Remaining Balance</label>
        <summarizedField>QB_Invoice__c.Remaining_Balance__c</summarizedField>
        <summaryForeignKey>QB_Invoice__c.OpportunityID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rooming_List_Received__c</fullName>
        <inlineHelpText>Has JSA received a rooming list for the delegation?</inlineHelpText>
        <label>Rooming List Received?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RoomlistSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roomlist Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roommate_Preference_1_Registrant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Roommate Preference #1 Registrant</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Roommate Preference #1 Registrant)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roommate_Preference_1__c</fullName>
        <inlineHelpText>Enter of the first and last name of your first choice for a roommate.</inlineHelpText>
        <label>Roommate Preference #1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roommate_Preference_2_Registrant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Roommate Preference #2 Registrant</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Roommate Preference #2 Registrant)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roommate_Preference_2__c</fullName>
        <inlineHelpText>Enter the first and last name of your second choice roommate.</inlineHelpText>
        <label>Roommate Preference #2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roommate_Preference_3_Registrant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Roommate Preference #3 Registrant</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Roommate Preference #3 Registrant)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roommate_Preference_3__c</fullName>
        <inlineHelpText>Enter the first and last name of your third choice roommate.</inlineHelpText>
        <label>Roommate Preference #3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <description>The amount of sales tax charged on the invoice.</description>
        <inlineHelpText>The amount of sales tax charged on the invoice.</inlineHelpText>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scholarship_Status__c</fullName>
        <description>This field shows the status of a scholarship application, if scholarship information has been requested.</description>
        <inlineHelpText>Possible values: &quot;Not Applicable,&quot; &quot;Requested,&quot; &quot;Received,&quot; &quot;Under Review,&quot; or &quot;Decision Made.&quot;</inlineHelpText>
        <label>Scholarship Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Made</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_ZIP_Code__c</fullName>
        <inlineHelpText>Enter the five-digit ZIP code of the current secondary school that you entered above.  If you are home schooled, or go to a school outside the U.S., enter &quot;N/A&quot;.</inlineHelpText>
        <label>School ZIP Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Choice__c</fullName>
        <inlineHelpText>Please enter your second choice campus/session.  If we cannot accept you into your first choice we will consider your application for your second choice.</inlineHelpText>
        <label>Second Choice Session</label>
        <picklist>
            <controllingField>Campus_Session__c</controllingField>
            <picklistValues>
                <fullName>Summer School at Princeton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer School at Stanford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer School at Georgetown - Session I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer School at Georgetown - Session II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer School at University of Virginia (APUSH)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Solicitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household Account of the individual who is responsible for soliciting this opportunity, if different from the account associated with the opportunity.  This should only be used for development opportunities, and is not needed when the solicitor is the same as the (long-term) solicitor on the account for the opportunity.</description>
        <inlineHelpText>Account of the individual who is responsible for soliciting this opportunity, if different from parent account for the opportunity.  Only be used for development opportunities. Not needed when the solicitor is the same as solicitor on the parent account.</inlineHelpText>
        <label>Secondary Solicitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Solicited Opportunities</relationshipLabel>
        <relationshipName>Solicited_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Was Follow-up Tag.  Need to regen Sesame database?</description>
        <inlineHelpText>1: Upper class families
2: Successful self-employed
3: Struggling Renters
4: Wealthy Upper Class
5: Asian Urbanite
6: Mainstream
7: Very wealthy professional
8: Disadvantaged
9: Upper middle class
10: Married w/ Kids
11. JSA Internal/Other</inlineHelpText>
        <label>Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Online_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Would you like to be able to pay your deposit and tuition online?</inlineHelpText>
        <label>Send Online Invoice?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shanghai_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shanghai Extension</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Shanghai Extension)</relationshipLabel>
        <relationshipName>ShanghaiOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solicitation_Type_give_get__c</fullName>
        <formula>IF(ISBLANK(Secondary_Solicitor__r.Id), &quot;give&quot;, IF(Secondary_Solicitor__r.Id =  AccountId, &quot;give&quot;, &quot;get&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solicitation Type (give/get)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitor__c</fullName>
        <formula>Account.Solicitor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Solicitor, pulled from the Solicitor on the Account for this Opportunity.</inlineHelpText>
        <label>Solicitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Requests__c</fullName>
        <inlineHelpText>Indicate any special requests, room requirements, or changes required to the dollar amount shown above.  If you have any questions or concerns, please call us at 800-334-5353 (San Mateo, CA) or 800-317-9338 (Washington, D.C.).</inlineHelpText>
        <label>Special Requests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stayclassy_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the student have a Stayclassy account? http://www.stayclassy.org/search/fundraisers?type=Fundraiser&amp;eid=9702</inlineHelpText>
        <label>Stayclassy Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stayclassy_URL__c</fullName>
        <description>Direct URL to the student&apos;s page if you find that s/he has a page set up and you want to keep close tabs on that student going forward</description>
        <label>Stayclassy URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Student_Age__c</fullName>
        <description>Age (in years) of &quot;primary&quot; contact.  Used in reports and templates.</description>
        <formula>Primary_Contact__r.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Birthdate__c</fullName>
        <description>Birthdate of &quot;primary&quot; contact.  Used in reports and templates.</description>
        <formula>Primary_Contact__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student_City__c</fullName>
        <description>Mailing City of &quot;primary&quot; contact.  Used in reports and templates.</description>
        <formula>Primary_Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_First_Name__c</fullName>
        <description>First name, pulled from the Primary Contact First Name field (for use with mail templates).</description>
        <formula>Primary_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Gender__c</fullName>
        <description>Gender of &quot;primary&quot; contact.  For templates.</description>
        <formula>CASE( Primary_Contact__r.Gender__c , &quot;Male&quot;, &quot;Male&quot;, &quot;Female&quot;, &quot;Female&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Home_Phone__c</fullName>
        <description>Home Phone of &quot;primary&quot; contact.  For templates.</description>
        <formula>Primary_Contact__r.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Last_Name__c</fullName>
        <description>For reports and mail merges.</description>
        <formula>Primary_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Mobile__c</fullName>
        <description>Mobile phone of &quot;primary&quot; contact.  For templates.</description>
        <formula>Primary_Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_State__c</fullName>
        <description>Mailing State of &quot;primary&quot; contact.  Used in reports and templates.</description>
        <formula>Primary_Contact__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_ZIP__c</fullName>
        <description>ZIP code from &quot;primary&quot; contact (student).  For mail merges.</description>
        <formula>Primary_Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Essays_for_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box and click &quot;Update&quot; when you have completed both essays and are ready to submit them for review by the application committee.</inlineHelpText>
        <label>Submit Essays for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summer_Deposit_Only__c</fullName>
        <description>Some payment, but not greater than $250.</description>
        <formula>IF(  AND(Total_Payments__c &gt; 0, Total_Payments__c &lt;= 250), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summer Deposit Only</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Symposium_Director__c</fullName>
        <formula>CASE(Symposium__c ,
&quot;Los Angeles Symposium&quot;, &quot;Tracy Poindexter&quot;,
&quot;California Symposium&quot;, &quot;Carter McCoy&quot;,
&quot;Northeast Symposium&quot;, &quot;Elizabeth Ventura&quot;,
&quot;Texas Symposium&quot;, &quot;Katie Langford&quot;,
&quot;Arizona Symposium&quot;, &quot;Richard Prosser&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Symposium Director (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symposium__c</fullName>
        <inlineHelpText>Gene Burd Institute on Los Angeles Media and Politics
California Institute on Energy and the Environment
New Jersey Institute on Leadership and National Security
Arizona Institute
Texas Symposium on Politics and Presidential Leadership</inlineHelpText>
        <label>Institute</label>
        <picklist>
            <picklistValues>
                <fullName>Arizona Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles Institute on Media and Politics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California Leadership Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RNC Symposium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNC Symposium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T_A_Approved_Online_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Group Opportunities only.  Indicates that the Teacher/Advisor has approved online payment via Paypal for all registrants.</inlineHelpText>
        <label>T/A Approved Online Payment?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>